--- a/src/components/OrderForm/_style.scss
+++ b/src/components/OrderForm/_style.scss
@@ -322,18 +322,30 @@
   }
 
   .products {
-    padding: 1.5rem 0;
-    overflow-x: scroll;
-    overflow-y: hidden;
+    //overflow-x: scroll;
+    //overflow-y: visible;
     white-space: nowrap;
+
+    //width: 100%;
+    height: 200px;
+
+    .content {
+      padding: 20px 0 0;
+      position: absolute;
+      height: 180px;
+      //width:700px;
+      //width: 700px
+      // width: 10000px;
+    }
+
     .card {
       white-space: normal;
       display: inline-block;
       position: relative;
-      width: 30%;
-      min-width: 150px;
-      height: 135px;
-      margin: 0 3.33% 0 0;
+      width: 100px;
+      min-width: 168px;
+      height: 136px;
+      margin: 0 20px 0 0;
       border-radius: 0;
       border-color: #95989A;
       text-align: center;
@@ -371,6 +383,28 @@
           display: block;
         }
       }
+
+      &.animate-enter {
+        transform: translateX(100px) translateY(-200px);
+        //transform: rotateY(-90deg);
+        transition: all 300ms ease-in, opacity 600ms ease-in;
+        opacity: 0.01;
+        &-active {
+          opacity: 1;
+          transform: translateX(0) translateY(0);
+          //transition: opacity 400ms ease-in;
+        }
+      }
+
+      &.animate-exit {
+        transition: opacity 400ms ease-in;
+        opacity: 1;
+        transform: none;
+        &-active {
+          opacity: 0.01;
+        }
+      }
+
     }
     max-width: 9999px;
 
@@ -387,6 +421,12 @@
     }
   }
 
+}
+
+@keyframes openspace {
+  to {
+    height: auto;
+  }
 }
 
 // -------------------------------
