--- a/src/components/Previewer/_style.scss
+++ b/src/components/Previewer/_style.scss
@@ -337,7 +337,7 @@ $highlight-color: rgba(#f74561, 0.2);
 
       transform: translateY(10px) scale(1);
       .cover.front {
-        transform: rotateX(65deg) translateZ(0);
+        transform: rotateX(65deg) translateY(-2px);
       }
       //.page {
       //  li {
