--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -65,7 +65,7 @@ $link-hover-decoration: none;
 
 // Forms
 
-$input-btn-padding-y-lg: 1.5rem;
+$input-btn-padding-y-lg: 1.2rem;
 $input-btn-padding-x-lg: 1.2rem;
 
 $input-placeholder-color: #9D9D9D;
@@ -73,7 +73,8 @@ $input-border-color: #95989A;
 $input-btn-border-width: 2px;
 //$input-btn-line-height-lg: 2.5;
 
-$input-height-lg: 80px;
+//$input-height-lg: 50px;
+$input-focus-border-color: none;
 
 $input-border-radius: 0;
 $input-border-radius-sm: 0;
