--- a/src/components/Previewer/_style.scss
+++ b/src/components/Previewer/_style.scss
@@ -86,7 +86,7 @@ $rotate-factor: 0.1;
       }
 
       &.front {
-        transform: rotateX(($initial-deg + ($pages-count*$rotate-factor)) + deg) translateZ(0);
+        transform: rotateX(($initial-deg + ($pages-count*$rotate-factor)) + deg) translateZ(1px);
         z-index: 100;
 
         > li {
@@ -322,9 +322,9 @@ $rotate-factor: 0.1;
 
     &:hover {
 
-      transform: translateY(10px) scale(1);
+      transform: translateY(0.5rem) scale(1);
       .cover.front {
-        transform: rotateX(65deg) translateY(-2px);
+        transform: rotateX(65deg);
       }
       //.page {
       //  li {
