--- a/src/components/Previewer/_style.scss
+++ b/src/components/Previewer/_style.scss
@@ -75,9 +75,9 @@ $rotate-factor: 0.1;
 
       > li {
         // TODO: think
-        background-position: -4mm;
+        background-position: center center;
         background-color: #eee;
-        background-size: 108%;
+        background-size: 107%;
         //background-size: cover;
         background-repeat: no-repeat;
         backface-visibility: hidden;
@@ -216,7 +216,7 @@ $rotate-factor: 0.1;
       }
     }
 
-    $pages-count-half: $pages-count/2;
+    $pages-count-half: 15; // $pages-count/2;
     // Pages count
     &.p#{($pages-count-half)} {
       .cover {
@@ -230,91 +230,79 @@ $rotate-factor: 0.1;
     // Animations
     // ----------------------------------------
 
-    &.highlight-frontOuter {
-      transform: scale(1.1);
-      //.cover.front {
-      //  li:first-child {
-      //    .highlight {
-      //      background-color: $highlight-color;
-      //    }
-      //  }
-      //}
-    }
+    &.animate {
+      //transition-duration: 5s !important;
+      //transition-delay: 5s !important;
 
-    &.highlight-frontInner {
-      transform: translateY(100px) scale(1.1);
-      .cover.front {
-        transform: rotateX(155deg);
-        //z-index: 0;
-        //li:last-child {
-        //  .highlight {
-        //    background-color: $highlight-color;
-        //  }
-        //}
+      &-frontOuter {
+        //transform: scale(1.1);
       }
-    }
 
-    &.highlight-backInner {
-      transform: translateY(0) scale(1.1);
-      .cover.front {
-
-        transition: z-index 0s;
-        transform: rotateX(155deg);
-        z-index: 0;
-
+      &-frontInner {
+        transform: translateY(50%);
+        .cover.front {
+          transform: rotateX(155deg);
+        }
       }
-      //.cover.back {
-      //  li:first-child {
-      //    .highlight {
-      //      background-color: $highlight-color;
-      //    }
-      //  }
-      //}
-      .page {
-        li {
-          $i: 0;
-          @while $i < $pages-count {
-            &:nth-child(#{$i}) {
-              $deg: $initial-deg + 100 + ($i * $rotate-factor);
-              transform: rotateX($deg+ deg);
+
+      &-backInner {
+        transform: rotateZ(0) translateY(50%) rotateX(0);
+        .cover.front {
+          transition: z-index 0s;
+          transform: rotateX(155deg);
+          z-index: 0;
+        }
+        .cover.back {
+          li:first-child {
+            .highlight {
+              background-color: $highlight-color;
             }
-            $i: $i + 1;
+          }
+        }
+        .page {
+          li {
+            $i: 0;
+            @while $i < $pages-count {
+              &:nth-child(#{$i}) {
+                $deg: $initial-deg + 100 + ($i * $rotate-factor);
+                transform: rotateX($deg+ deg);
+              }
+              $i: $i + 1;
+            }
           }
         }
       }
-    }
+      &-backOuter {
 
-    &.highlight-backOuter {
-      //transform: rotateZ(180deg);
+        transform: rotateZ(180deg) translateY(90%);
+        //transform: translateY(100px);
 
-      transform: rotateZ(180deg) translateY(120%) scale(1.1);
-      //transform: translateY(100px);
+        .cover.front {
+          transform: rotateX(155deg);
+          z-index: 0;
+        }
 
-      .cover.front {
-        transform: rotateX(155deg);
-        z-index: 0;
-      }
+        .cover.back {
+          transform: rotateX(130deg);
+          box-shadow: none;
+          //li:last-child {
+          //  .highlight {
+          //    background-color: $highlight-color;
+          //  }
+          //}
+          z-index: 10;
+        }
 
-      .cover.back {
-        transform: rotateX(130deg);
-        box-shadow: none;
-        //li:last-child {
-        //  .highlight {
-        //    background-color: $highlight-color;
-        //  }
-        //}
-        z-index: 10;
-      }
-
-      .page {
-        li {
-          $i: 0;
-          @while $i < $pages-count {
-            &:nth-child(#{$i}) {
-              $deg: $initial-deg + 110 + $i;
-              transform: rotateX($deg+ deg);
+        .page {
+          li {
+            $i: 0;
+            @while $i < $pages-count {
+              &:nth-child(#{$i}) {
+                $deg: $initial-deg + 110 + $i;
+                transform: rotateX($deg+ deg);
+              }
+              $i: $i + 1;
             }
-            $i: $i + 1;
           }
         }
       }
