--- a/src/components/Previewer/_style.scss
+++ b/src/components/Previewer/_style.scss
@@ -8,7 +8,6 @@ $border-width: 0;
 
 $highlight-color: rgba(#f74561, 0.2);
 
-$page-color-lighten: 10;
 $rotate-factor: 0.1;
 
 .Previewer {
@@ -64,7 +63,7 @@ $rotate-factor: 0.1;
     }
 
     .cover > li, .page > li {
-      box-shadow: inset 0 0 5px rgba(150, 150, 150, 0.1), inset 0 0 1px rgba(200, 200, 200, 0.1);
+      //box-shadow: inset 0 0 5px rgba(150, 150, 150, 0.1), inset 0 0 1px rgba(200, 200, 200, 0.1);
     }
 
     // Cover
@@ -167,8 +166,9 @@ $rotate-factor: 0.1;
         transition-property: transform;
         transition-timing-function: ease;
 
-        background: linear-gradient(0, #e1ddd8 0%, #fffbf6 100%);
-        box-shadow: inset 0px -1px 1px rgba(#555, 0.1), inset 0 40px 100px rgba(#666, 0.1);
+        background: #fff;
+        //background:  linear-gradient(to bottom, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 8%, rgba(254,254,254,1) 99%, rgb(234, 234, 234) 100%);
+        //box-shadow: inset 0px -1px 1px rgba(#555, 0.1), inset 0 40px 100px rgba(#666, 0.1);
         //border-radius: 0 5px 5px 0;
 
         transition-duration: 0.3s;
@@ -206,11 +206,19 @@ $rotate-factor: 0.1;
         }
         .page {
           > li {
-            @if $name == transparent {
-              background: #fff;
-            } @else {
-              background: lighten($color, $page-color-lighten);
-            }
+            //@if $name == transparent {
+            //  background: #fff;
+            //} @else {
+              //background: lighten($color, $page-color-lighten);
+
+              background: linear-gradient(to bottom,
+                      darken($color, 5) 0%,
+                      //lighten($color, 20) 8%,
+                      lighten($color, 10) 99%,
+                      rgb(234, 234, 234) 100%
+              );
+
+            //}
           }
         }
       }
